# SHIELD-toolbox

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.claude/: settings.json
.claude/skills/new-pr/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/shield_toolbox/: __init__.py  config.py  constants.py  gauges.py
tests/: conftest.py  test_config.py  test_gauges.py  test_package.py
